# Stitching

build-stitching_detailed-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  stitching_detailed
build-stitching_detailed-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-stitching_detailed-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.8041A6847F12E1E2.idx  affine.hpp.CA0C76DF34914492.idx  all_indices.h.5108A2C59BEB57C2.idx  alloca.h.B3C3404035C15EA6.idx  allocator.h.59B0D9F7A1366406.idx  any.h.AD1A3EDC7F3AD5CE.idx  async.hpp.4285D175E13A773D.idx  atomic_base.h.3A2E72751505F214.idx  auto_ptr.h.2B81CF3770636FDE.idx  autocalib.hpp.1440AEFA138675C7.idx  autotuned_index.h.1D3637AE53C49345.idx  background_segm.hpp.14D0BBCE03697CC9.idx  base.hpp.935FFF30193A0A2A.idx  blenders.hpp.2BF7AA61D767A70C.idx  bufferpool.hpp.6FA9B1F65F1A0550.idx  calib3d.hpp.828AADF6746211EE.idx  camera.hpp.CC79919AE2D66ED2.idx  cfloat.C20E2DF216119D3D.idx  check.hpp.247659BE7DE5DD22.idx  chrono.C0F4C75E74621C97.idx  climits.E9F0147DAB8DABC4.idx  cmath.24984E453DC2C2EC.idx  complex.C6765EBBF48AEB0C.idx  composite_index.h.E3E11914B9045C9D.idx  config.h.3390A854AE587B4A.idx  core.hpp.EF3A920C16B7FD51.idx  cstddef.E24F265AA3562071.idx  cstdint.8EFBCBA3007A64A4.idx  cuda.hpp.28507614FBF0E6A2.idx  cuda.inl.hpp.DE8891B48629F376.idx  cuda_types.hpp.FA172990365774EA.idx  cv_cpu_dispatch.h.D44D7CA426320C32.idx  cvdef.h.D389B3BCB9649F40.idx  (+126 more)
stitching_detailed/: CMakeLists.txt  main.cpp  stitching_detailed.pro  warper.cpp  warper.h
